--- a/Html 5 e CSS3/Desafios/Cordel-simples-site/style.css
+++ b/Html 5 e CSS3/Desafios/Cordel-simples-site/style.css
@@ -1,10 +1,21 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Passion+One&display=swap');
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Pacifico', cursive;
+}
+
 *{
     margin: 0;
     padding: 0;
+    
 }
 
 html, body{
     min-height: 100vh;
+    font-family: var(--font1);
     
 
 }
@@ -18,6 +29,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header > p{
@@ -40,6 +53,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 4vw;
 }
 
 section.normal{
@@ -51,13 +66,25 @@ section.normal{
 section.imagem{
     background-color: rgb(185, 182, 176);
     color: black;
+    
  
 }
 section.imagem > p{
     width: 400px;
     background-color: rgba(0, 0, 0, 0.356);
+    display: inline-block;
 }
+section > p{
+    padding-bottom: 2em;
+}
+section#img01{
+    background-image: url(../Cordel-simples-site/imagens/background001.jpg);
+    background-position: right center;
+}
+section#img02{
+    background-image: url(../Cordel-simples-site/imagens/background002.jpg);
 
+}
 
 footer{
     background-color: black;
