--- a/Html 5 e CSS3/Desafios/Cordel-simples-site/style.css
+++ b/Html 5 e CSS3/Desafios/Cordel-simples-site/style.css
@@ -1,6 +1,5 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Passion+One&display=swap');
-
 :root{
     --font1: Verdana, Geneva, Tahoma, sans-serif;
     --font2: 'Passion One', cursive;
@@ -16,26 +15,25 @@
 html, body{
     min-height: 100vh;
     font-family: var(--font1);
-    
+    font-size: 1em;
 
 }
 header{
     background-color: black;
     color: white;
     text-align: center;
-    
+
 }
 
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--font2);
-    font-size: 10vw;
+    font-size: 5vw;
 }
 
 header > p{
     padding-bottom: 50px;
-
 }
 
 a{
@@ -54,7 +52,7 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--font3);
-    font-size: 4vw;
+    font-size: 2vw;
 }
 
 section.normal{
@@ -65,24 +63,29 @@ section.normal{
 
 section.imagem{
     background-color: rgb(185, 182, 176);
-    color: black;
-    
+    color: rgb(255, 255, 255);
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.541);
+    background-size: cover;
+    background-attachment: fixed;
+
  
 }
 section.imagem > p{
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.356);
+    background-color: rgba(0, 0, 0, 0.507);
     display: inline-block;
+    text-shadow: 2px 5px 2px black;
 }
 section > p{
     padding-bottom: 2em;
 }
 section#img01{
-    background-image: url(../Cordel-simples-site/imagens/background001.jpg);
+    background-image: url(imagens/background001.jpg);
     background-position: right center;
+    
 }
 section#img02{
-    background-image: url(../Cordel-simples-site/imagens/background002.jpg);
+    background-image: url(imagens/background002.jpg);
+    
 
 }
 
