Autalização paginas Code Chella

--- a/Html 5 e CSS3/CodeChella/style.css
+++ b/Html 5 e CSS3/CodeChella/style.css
@@ -1,20 +1,24 @@
 @import url("/styles/header.css");
 @import url("/styles/banner.css");
+@import url('/styles/corpo-pagina.css');
+@import url('/styles/corpo-sabado.css');
+@import url('/styles/corpo-domingo.css');
+@import url('/styles/footer.css');
 
 :root{
     --azul: #4650BD;
     --verde-degrade: linear-gradient(180deg, #304968 0%, #36C1A0 52.6%, #4650BD 100%);
     --font-principal: "Raleway";
+    --fonte-banner: "Calistoga";
     --cor-de-fundo: #EBECEE;
-    --branco: #fff
-
+    --branco: #fff;
+    --verde: #008364;
 }
 
 body{
     font-family: var(--font-principal);
     font-weight: 800;
-    background-color: blanchedalmond;
-
-
+    background: var(--verde-degrade);
 }
+
 
