--- a/Html 5 e CSS3/CodeChella/styles/header.css
+++ b/Html 5 e CSS3/CodeChella/styles/header.css
@@ -5,7 +5,7 @@
     height: 22px;
     background-image: url("/img/menu.svg");
     background-repeat: no-repeat;
-    background-position: center;
+    
     
 }
 .cabecalho{
@@ -14,10 +14,16 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
+    
 }
 .container{
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0 2em;
+    
+    
 }
 .lista-menu{
     display: none;
@@ -31,7 +37,11 @@
 
 
 .container__imagem{
-    padding: 1em;
+    padding: 1em 0;
+}
+.container__botao{
+    display: none;
+
 }
 
 .container__botao:checked~.lista-menu{
