--- a/Html 5 e CSS3/CodeChella/paginas/experiencia/banner-expe.css
+++ b/Html 5 e CSS3/CodeChella/paginas/experiencia/banner-expe.css
@@ -1,24 +1,37 @@
-.banner{
+ .banner{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("../experiencia/img/banner-experiencia.svg") no-repeat;
+    background-image: url('/paginas/experiencia/img/banner-experiencia.svg');
     background-size: cover;
-    background-position: center;
+    background-position: top;
     width: 100%;
     height: 384px;
-    opacity: 40%;
     
+} 
+
+.primeira-img{
+    width: 100%;
+    height: 384px;
+
+}
+.segunda-img{
+    width: 80%;
 }
 
-.banner__texto{
+.banner__titulo{
     width: 100%;
     height: 270px;
     display: flex;
     justify-content: center;
     align-items: center;
-   
     
+    background-size: cover;
+    
+}
+.banner__texto{
+    opacity: 100%;
+   
 }
 .banner__titulo 
 {
@@ -35,17 +48,30 @@
 @media (min-width: 768px){
     .banner
     {
-        background-image: url('../experiencia/img/banner-sem-texto768.jpg');
+        background-image: url('/paginas/experiencia/img/banner-768.svg');
         background-repeat: no-repeat;
         background-size: cover;
-        background-color: aquamarine;
     }
 
     .banner__titulo
-{
+    {
     font-size: 64px;
     color: var(--branco);
-
-}
+    }
   
+}
+
+@media (min-width: 1440px){
+    .banner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('/paginas/experiencia/img/banner-1440.svg');
+    background-size: cover;
+    background-position: top;
+    width: 100%;
+    }
+ 
+
+
 }
