--- a/Html 5 e CSS3/CodeChella/style.css
+++ b/Html 5 e CSS3/CodeChella/style.css
@@ -1,9 +1,9 @@
-/* @import url("/styles/header.css");  */
-/* @import url("/styles/banner.css"); */ 
-/* @import url('/styles/corpo-pagina.css');*/
-/* @import url('/styles/corpo-sabado.css'); */ 
-/* @import url('/styles/corpo-domingo.css'); */
-/* @import url('/styles/footer.css'); */
+@import url("/styles/header.css");  
+@import url("/styles/banner.css"); 
+
+/* @import url('/styles/corpo-pagina.css'); */
+
+@import url('/styles/footer.css'); 
 
 
 
