--- a/Html 5 e CSS3/CodeChella/styles/banner.css
+++ b/Html 5 e CSS3/CodeChella/styles/banner.css
@@ -6,9 +6,15 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.banner__texto{
+
+/* .banner__titulo{
     width: 360px;
     height: 270px;
     display: flex;
@@ -17,8 +23,8 @@
     align-items: center;
     color: rgb(215, 0, 235);
   
-    
-}
+} */
+
 .banner__titulo, 
 .link__banner{
     font-family: var(--fonte-banner);
@@ -27,10 +33,12 @@
     line-height: 42px;
     color: black;
     color: var(--branco);
-}
+    text-align: center;
+} 
 .link__banner{
-    
+    text-decoration: none;
 }
+
 
 @media (min-width: 768px){
     .banner{
