--- a/Html 5 e CSS3/CodeChella/styles/footer.css
+++ b/Html 5 e CSS3/CodeChella/styles/footer.css
@@ -1,5 +1,6 @@
 .rodape{
-    margin: 2.5em 0;
+    margin-bottom: 3em;
+    padding: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
