--- a/Html 5 e CSS3/CodeChella/paginas/gerais/drop-gerais.css
+++ b/Html 5 e CSS3/CodeChella/paginas/gerais/drop-gerais.css
@@ -15,27 +15,15 @@
 }
 
 .perguntas{
-    
+    background-color: var(--azul);
+    cursor: pointer;
 
 }
-.lista-perguntas{
-    
-    text-align: center;
-    padding: 10px 0;
-    color: white;
-    padding: 0 1.3em;
-    
-    
-    
-}
-
 .titulo-pergunta{
     font-family: var(--fonte-principal);
     font-weight: 700;
     color: var(--branco);
     font-size: 32px;
-    cursor: pointer;
-    background-color: var(--azul);
     margin-top: 0.3em;
     display: flex;
     padding: 0.5em;
@@ -43,89 +31,67 @@
 
 }
 
+
+.lista-perguntas{
+    text-align: center;
+    padding: 10px 0;
+    color: white;
+    padding: 0 1.3em; 
+    margin-bottom: 1em;
+
+}
+
 .resposta{
-    font-family: var(--fonte-principal);
-    color: var(--cinza);
-    font-weight: 500;
-    font-size: 20px;
-    background-color: var(--azul-claro);
-    line-height: 2em;
-    transition: 1s;
-    margin-bottom: 1.3em;
-    display: none;
-    padding:1.2em 1em;
+    /* padding:1.2em 1em; */
     text-align: left;
-    
-    
-}
+    overflow: hidden;
+    max-height: 0;
+    transition: all 0.3s ease-in-out;
 
-
-.active{
-    transform: translateY(0) scaleY(1);
-    display: block;
-    
-}
-
-
-
-/*
-
-.dropdown{
-    margin: 1.3em;
-    position: relative;
-}
-
-.titulo{
-    display: flex;
-    justify-content: space-between;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--azul);
-    padding:1em; 
-    cursor: pointer;
-    transition: background 0.3s;
-
-}
-
-.corpo__drop{
-    background-color: var(--azul-claro);
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1.2em;
-    position: relative;
-    
-}
-.titulo__drop{
-    font-family: var(--fonte-principal);
-    font-weight: 700;
-    color: var(--branco);
-    font-size: 32px;
-}
-
-.texto__drop{
-    padding:1.2em 1em;
-    line-height: 2em;
-    font-family: var(--fonte-principal);
-    color: var(--cinza);
-    font-weight: 500;
-    font-size: 20px;
-    transform: translateY(-45%) scaleY(0);
-    transition: 1s; 
-    position: relative;
    
 }
 
+.texto-resposta{
+    font-family: var(--fonte-principal);
+    color: var(--cinza);
+    font-weight: 500;
+    font-size: 20px;
+    background-color: var(--azul-claro);
+    line-height: 2em;
+    padding: 1em;
+}
 
-.botao__menu-drop{
-    width: 14px;
-    height: 14px;
-    padding: 0.5em;
+/*####### CASO DESEJ USAR O JAVASCRIPT PARA O DROPDOWN####*/
+.active{
+    display: block;
+}
+
+/*##### CASO DESEJE USAR O CSS PARA O DROPDOWN#####
+.perguntas:hover ~ .resposta {
+    display: block;
+}*/
+
+
+
+@media (min-width: 1440px){
+    .lista-perguntas{
+        text-align: center;
+        padding: 10px 0;
+        margin: 0 15em 1em 15em;
+
+    }
+    .texto__titulo{
+        padding: 10px;
+        font-size: 48px;
+    }
+
 }
 
 
-.titulo:hover ~ .texto__drop{
-    transform: translateY(0) scaleY(1);
 
-}
+
+
+
+
 
 
