--- a/Html 5 e CSS3/CodeChella/paginas/experiencia/banner-expe.css
+++ b/Html 5 e CSS3/CodeChella/paginas/experiencia/banner-expe.css
@@ -1,4 +1,4 @@
- .banner{
+ /* .banner{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -74,4 +74,4 @@
  
 
 
-}
+} */
