--- a/Html 5 e CSS3/CodeChella/styles/banner.css
+++ b/Html 5 e CSS3/CodeChella/styles/banner.css
@@ -1,33 +1,31 @@
-
-.banner__texto img{
+.banner__geral img{
+    opacity: 40%;
     width: 100%;
     height: 280px;
-    object-fit:cover;
-    opacity: 0.4;
+    object-fit: cover;
+    object-position:initial;
 
 }
    
 .banner__geral{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: violet;
-   
-    
+
 }
 
-.banner__titulo{
 
-    background-color: aquamarine;
+.banner__titulo{
+    position:absolute;
     font-family: var(--fonte-banner);
     font-weight: 400;
     font-size: 32px;
     line-height: 42px;
-    color: black;
-    color: var(--branco);
+    color:var(--branco);
     text-align: center;
     z-index: 1;
-
+    
 } 
 .link__banner{
     text-decoration: none;
@@ -37,14 +35,41 @@
 @media (min-width: 768px){
     .banner img{
         height: 384px;
+        opacity: 0.4;
 
     }
+
+    .banner__titulo{
+        font-weight: 400;
+        font-size: 64px;
+        color: var(--branco);
+        line-height: 83px;
+        z-index: 1;
+    } 
 }
 
 @media (min-width: 1440px){
     .banner img{
         height: 408px;
+        opacity: 0.4;
     }
+
+    .banner__titulo{
+        font-weight: 400;
+        font-size: 64px;
+        color: var(--branco);
+        line-height: 83px;  
+        z-index: 1;
+        
+    }
+    .lista-menu{
+  
+        justify-content: space-around;
+        width: 50%;
+
+    }
+
+
 
 }
 
