--- a/Html 5 e CSS3/CodeChella/styles/corpo-pagina.css
+++ b/Html 5 e CSS3/CodeChella/styles/corpo-pagina.css
@@ -67,78 +67,25 @@
 
 }
 
-.pagina__inicial-sabado,
-.pagina__inicial-domingo{
-    background: var(--verde);
-    padding: 20px ;
 
-}
-.pagina__inicial-sabado-texto,
-.pagina__inicial-domingo-texto{
-  
-    font-size: 32px;
-    font-family: var(--fonte-banner);
-    font-weight: 400;
-    color: var(--branco);
-    text-transform: uppercase;
-}
-
-/* .pagina__inicial-sabado:before{
-    position: absolute;
-    content:"";
-    width:100px;
-    height:4px;
-    background:#ff0000;
-    align-items: center;
-    text-align: right
-    ;
-
-}
-.pagina__inicial-sabado:after{
-    position: absolute;
-    content:"";
-    width:100px;
-    height:4px;
-    background:#ff0000;
-    align-items: center;
-    text-align: left
-
-} */
-
-
-
-
-
-
-
-.pagina__inicial-sabado-textos,
-.pagina__inicial-domingo-textos{
-    line-height: 4.5em;
-}
-.pre-footer{
+/* .pre-footer{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 338px;
+} */
+.pre-footer img{
+    opacity: 40%;
+    width: 100%;
+    height: 380px;
+    object-fit: cover;
+    object-position:center;
+
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (min-width: 768px){
+@media (min-width: 768){
     .primeira-img{
         width: 609px;
         height: 381px;
@@ -157,9 +104,7 @@
         width: auto;
         background-size: cover;
         background-position: center;
-    }
-    
-   
+    }  
    
 }
 
