--- a/Html 5 e CSS3/CodeChella/styles/header.css
+++ b/Html 5 e CSS3/CodeChella/styles/header.css
@@ -6,6 +6,7 @@
     background-image: url("/img/menu.svg");
     background-repeat: no-repeat; 
     
+    
 }
 .cabecalho{
     background-color: var(--azul);
@@ -14,6 +15,8 @@
     align-items: center;
     position: relative;
     padding: 1em 0;
+    z-index: 1;
+   
 
 }
 .container{
@@ -22,6 +25,7 @@
     width: 80%;
     justify-content: space-between; 
     margin: 0 2em;
+   
 
 }
 
